--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "react-app-rewired test --watchAll",
+    "coverage": "react-app-rewired test --coverage --watchAll=false ",
     "eject": "react-scripts eject"
   },
   "jest": {
@@ -28,8 +29,13 @@
     "setupFilesAfterEnv": [
       "@testing-library/jest-dom/extend-expect",
       "jest-localstorage-mock"
-    ]
+    ],
+    "collectCoverageFrom": [
+      "!src/index.js"
+    ],
+    "coverageDirectory": "src/__tests__/coverage"
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
